# SIP-Client

./: .cproject  .gitignore  .project  CMakeLists.txt  ESP32_SIP_CLIENT_DOCUMENTATION.md  README.md  SIP_SERVERS_LIST.txt
main/: CMakeLists.txt  main.c
